--- a/players.html
+++ b/players.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registered Players</title>
+    <title>Players Registered</title>
 </head>
 <body>
-    <h1>Registered Players</h1>
+    <h1>Players Registered</h1>
     <ul id="players-list"></ul>
     <p id="error-message" style="color: red;"></p>
 
